Player's name passed on to front end - update and tidied up relevent tests